--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,94 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
+absl-py==0.11.0
+appdirs==1.4.4
+argon2-cffi==20.1.0
+astunparse==1.6.3
+async-generator==1.10
+attrs==20.2.0
+backcall==0.2.0
+bleach==3.2.1
+cachetools==4.2.0
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+colorama==0.4.4
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+distlib==0.3.1
+entrypoints==0.3
+filelock==3.0.12
+flatbuffers==1.12
+gast==0.3.3
+google-auth==1.24.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+grpcio==1.32.0
+h5py==2.10.0
+idna==2.10
+ipykernel==5.3.4
+ipython==7.19.0
+ipython-genutils==0.2.0
+jedi==0.17.2
 Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-core==4.6.3
+jupyterlab-pygments==0.1.2
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.3.3
 MarkupSafe==1.1.1
+matplotlib==3.3.2
+mistune==0.8.4
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.2
+notebook==6.1.4
 numpy==1.19.3
-pandas==1.1.4
+oauthlib==3.1.0
+opt-einsum==3.3.0
+packaging==20.4
+pandas==1.1.3
+pandocfilters==1.4.3
+parso==0.7.1
+pickleshare==0.7.5
+Pillow==8.0.1
+plotly==4.1.0
+prometheus-client==0.8.0
+prompt-toolkit==3.0.8
+protobuf==3.14.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.7.2
+pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
-python-dotenv==0.15.0
-pytz==2020.4
+pytz==2020.1
+pywin32==228
+pywinpty==0.5.7
+pyzmq==19.0.2
+requests==2.24.0
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.6
+Send2Trash==1.5.0
 six==1.15.0
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.4.0
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+terminado==0.9.1
+testpath==0.4.4
+tornado==6.0.4
+traitlets==5.0.5
+typing-extensions==3.7.4.3
+urllib3==1.25.11
+virtualenv==20.1.0
+wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==1.0.1
+wrapt==1.12.1
+xlrd==1.2.0
